samples/_failures_safe/1761527989_59de6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9769c935.c: In function ‘main’:
./samples/SAFE/__tmp_9769c935.c:148:9: error: expected declaration or statement at end of input
  148 |         for (int i = start; i < entry_count; i++) {
      |         ^~~
./samples/SAFE/__tmp_9769c935.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9769c935.c:148:9: error: expected declaration or statement at end of input
